# dirdem

./: .gitignore  README.org  dirDem.org  dirdem.html  dirdem.org  env.toml  node-packages.nix  package-lock.json  package.json  pyproject.toml  secrets.yml  shell.nix  tailwind.config.js
DOC/: dirDem.html  dirDem.org
dirdem/: __init__.py  appProtoFundus.py  application.py
dirdem/config/: __init__.py  conf.py  setting.json
dirdem/dummy/: dummy.py  fake.json
dirdem/templates/: base.html  table.html  title.html
dirdem/templates/FUNDUS/: index.html
dirdem/templates/ballot/: create.html  index.html  showAndCreate.html
dirdem/templates/homepage/: index.html
dirdem/templates/partials/: alert.html  dateTimePicker.html  table.html  title.html
dirdem/templates/votes/: create.html
dirdem/utils/: smartcontract.py
smartcontract/: brownie-config.yaml
smartcontract/FUNDUS/vyper-user/contracts/: User.vy
smartcontract/FUNDUS/vyper-user/scripts/: user.py
smartcontract/ballot/contracts/FUNDUS/: user.vy
smartcontract/ballot/scripts/: helpful_scripts.py
smartcontract/ballot/scripts/ballot/: deploy.py
smartcontract/ballot/scripts/user/: 01_user.py
smartcontract/contracts/: Ballot.vy  BallotList.vy  Ballots.vy
smartcontract/scripts/ballot/: 1.py  deploy.py
smartcontract/scripts/ballotList/: deploy.py
smartcontract/scripts/ballots/: 1.py  deploy.py
smartcontract/scripts/scenario/: 00.py  01.py  deployBallotAndAddToBallotList.py
tests/: test_dirdem.py
