[tool.poetry]
name = "dirDem"
version = "0.1.0"
description = "a votingÄapp-Prototyp"
authors = ["Frank Beutelschiess <fbeutelschiess@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-Assets = "^2.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
