[tool.poetry]
name = "dirDem"
version = "0.1.0"
description = "a votingÄapp-Prototype"
authors = ["Frank Beutelschiess <fbeutelschiess@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-Assets = "^2.0"
toml = "^0.10.2"

web3 = "5.23.1"
Flask-RESTful = "^0.3.9"
marshmallow = "^3.13.0"
eth-brownie = "^1.16.4"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
# pytest = "^5.2"

# [tool.pyright]
# include = ["dirdem"]
# executionEnvironments = [
#   { root = "dirdem" }
# ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
